--- a/stacks/authentik/blueprints/app-whoami.yaml
+++ b/stacks/authentik/blueprints/app-whoami.yaml
@@ -22,3 +22,5 @@ entries:
     attrs:
       name: whoami
       provider: !KeyOf whoami
+      group: Infrastructure
+      icon: icons/traefik.png
