--- a/stacks/authentik/blueprints/app-grafana.yaml
+++ b/stacks/authentik/blueprints/app-grafana.yaml
@@ -31,5 +31,7 @@ entries:
     attrs:
       name: Grafana
       provider: !KeyOf grafana
-      open_in_new_tab: true
+      group: Infrastructure
+      icon: icons/grafana.svg
       meta_launch_url: https://grafana.lab.omglolwtfbbq.com/login/generic_oauth
+      open_in_new_tab: true
