delete prometheus datasource

--- a/stacks/grafana/grafana/provisioning/datasources/prometheus.yaml
+++ b/stacks/grafana/grafana/provisioning/datasources/prometheus.yaml
@@ -1,7 +1,12 @@
 apiVersion: 1
 
-datasources:
+#datasources:
+#  - uid: cpnCDbRRz
+#    type: prometheus
+#    name: Prometheus
+#    url: http://prometheus:9090
+
+deleteDatasources:
   - uid: cpnCDbRRz
-    type: prometheus
     name: Prometheus
-    url: http://prometheus:9090
+    orgId: 1
